--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,9 @@
-
+.cardHolder {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding: 30px;
+  width: 100%;
+  height: 100%;
+  gap: 75px;
+}
