--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,11 +2,15 @@
   outline: 1px solid black;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 20px 0px;
   align-items: center;
   box-shadow: 3px 3px 5px;
+  border-radius: 16px;
+  background-color: rgb(236, 236, 236);
 }
 
 .card:hover {
   cursor: pointer;
+  background-color: rgb(170, 170, 170);
 }
