Implement country card flags

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,8 +2,8 @@
   outline: 1px solid black;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 20px 0px;
+  justify-content: center;
+  gap: 100px;
   align-items: center;
   box-shadow: 3px 3px 5px;
   border-radius: 16px;
